--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="30dp"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_marginBottom="60dp"
